welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:58: error: ';' expected but ')' found.
      motif3Color.GREEN)
                       ^